Fix Partners and Sponsors alignment

--- a/client/src/components/Home/PartnersSection/PartnersSection.css
+++ b/client/src/components/Home/PartnersSection/PartnersSection.css
@@ -125,7 +125,7 @@ text-decoration: none;
       }
 }
 
-@media(min-width:1600px) {
+@media(min-width:1400px) {
       .container.partners-section {
             max-width: 85vw;
       }
